--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,53 @@
-<div>
-    <mat-toolbar color="primary" class="example-toolbar">
+<div class="app-container" [class.app-is-mobile]="mobileQuery.matches" *ngIf="true">
+    <mat-toolbar color="primary" class="app-toolbar">
         <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-        <h1 class="example-app-name">Empty App</h1>
-    </mat-toolbar>
-    <mat-sidenav-container class="example-sidenav-container"
+        <mat-icon>shopping_basket</mat-icon>
+        <h1 class="app-name">Empty App</h1>
+        <!--<mat-form-field class="globalSearch">
+            <input type="text" placeholder="Search" aria-label="GlobalSearch" matInput [formControl]="myControl" [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete">
+              <mat-option *ngFor="let option of options" [value]="option">
+                {{ option }}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>-->
+          <div class="userHeader">
+                <span mat-button [matMenuTriggerFor]="menu" class="alertIcon">
+                        <i *ngIf="true"><mat-icon>notifications_active</mat-icon></i>
+                        <i *ngIf="false"><mat-icon>notifications</mat-icon></i>
+                </span>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item>Message 1</button>
+                    <button mat-menu-item>Message 2</button>
+                </mat-menu>
+
+                <button mat-button [matMenuTriggerFor]="userSettings">
+                    System User
+                    <mat-icon>keyboard_arrow_down</mat-icon>
+                </button>
+                <mat-menu #userSettings="matMenu">
+                <button mat-menu-item>Settings</button>
+                <button mat-menu-item>Logout</button>
+                </mat-menu>
+          </div>
+    
+        </mat-toolbar>
+
+
+    <mat-sidenav-container class="app-sidenav-container"
                             [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+        <mat-sidenav #snav opened [mode]="mobileQuery.matches ? 'over' : 'side'"
                     [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-            <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+            <a mat-list-item routerLink="." *ngFor="let nav of fillerNav"> <i class="material-icons md-18">face</i>   {{nav}}</a>
         </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
             <router-outlet></router-outlet>
         </mat-sidenav-content>
     </mat-sidenav-container>
+</div>
+
+<div *ngIf="false">
+    <router-outlet></router-outlet>
 </div>
