Changes to dashboard

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,11 @@
     left: 0;
     right: 0;
   }
+
+  .app-toolbar{
+    background: black;
+    color: white;
+  }
   
   .app-is-mobile .app-toolbar {
     position: fixed;
