--- a/src/app/dashboard/sampleform/sampleform.component.html
+++ b/src/app/dashboard/sampleform/sampleform.component.html
@@ -1,12 +1,12 @@
 <mat-card class="formContainer"> 
   <div class="col-md-12">
     <span class="col-md-4">
-      <button class="btn btn-primary" (click)="setFormValue()">
-            Load Inital Values
+      <button class="btn btn-primary m-t-10" (click)="setFormValue()">
+            Load Values
       </button>
     </span>
-    <span class="col-md-4">
-        <button class="btn btn-primary" (click)="resetForm()">
+    <span class="col-md-4 ">
+        <button class="btn btn-primary m-t-10" (click)="resetForm()">
             Reset Form
         </button> 
       </span>
