--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container" [class.app-is-mobile]="mobileQuery.matches" *ngIf="isUserLoggedIn">
-    <mat-toolbar color="primary" class="app-toolbar">
+    <mat-toolbar class="app-toolbar">
         <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
         <mat-icon>shopping_basket</mat-icon>
         <h1 class="app-name">Empty App</h1>
